# B6B36PJC

./: .gitignore  README.md
INIT_A/: CMakeLists.txt  main.cpp
INIT_B/: CMakeLists.txt  factorial.cpp  factorial.hpp  tests-factorial.cpp
SYMCALC/: app.cpp  cmdline.cpp  expr.cpp  expr_impl.cpp  expr_impl.hpp  main.cpp
SYMCALC/tests/: tests-expr.cpp
TINY-00/: tiny-00.cpp
TINY-01/: tiny-01.cpp
TINY-02/: tiny-02.cpp
TINY-03/: tiny-03.cpp
TINY-04/: tests-tiny-04.cpp  tiny-04.cpp
TINY-05/: tiny-05.cpp  tiny-05.hpp
TINY-06/: tiny-06.cpp  tiny-06.hpp
TINY-07/: tiny-07.cpp  tiny-07.hpp
TRIE/: test-helpers.cpp  tests-trie-01.cpp  tests-trie-02.cpp  tests-trie-03.cpp  trie.cpp  trie.hpp
WC/: CMakeLists.txt  README.md  main.cpp
